--- a/gamev10/app/src/main/res/layout/activity_register.xml
+++ b/gamev10/app/src/main/res/layout/activity_register.xml
@@ -8,10 +8,13 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
     <EditText
         android:id="@+id/password"
-        android:layout_width="465dp"
+        android:layout_width="0dp"
         android:layout_height="44dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
@@ -22,9 +25,11 @@
 
     <EditText
         android:id="@+id/password2"
-        android:layout_width="471dp"
+        android:layout_width="0dp"
         android:layout_height="44dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
         android:ems="10"
         android:hint="Confirm Password"
         android:inputType="textPassword"
@@ -47,12 +52,14 @@
 
     <EditText
         android:id="@+id/user"
-        android:layout_width="461dp"
+        android:layout_width="0dp"
         android:layout_height="49dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="44dp"
+        android:layout_marginEnd="30dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:hint="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
