--- a/gamev10/app/src/main/res/layout/activity_welcome_page.xml
+++ b/gamev10/app/src/main/res/layout/activity_welcome_page.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/first_card"
+            android:id="@+id/firs_card"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
