--- a/gamev10/app/src/main/res/layout/activity_welcome_page.xml
+++ b/gamev10/app/src/main/res/layout/activity_welcome_page.xml
@@ -1,27 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#5FD5BD"
-    android:padding="20dp"
-    tools:context=".WelcomePage">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Horizontal ScrollView Example"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_marginTop="25dp">
 
-        <ImageView
-            android:id="@+id/first_card"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:scaleType="centerInside">
+        <HorizontalScrollView
+            android:id="@+id/horizontalScrollView"
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
 
-        </ImageView>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/card1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+
+                <ImageView
+                    android:id="@+id/card2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cerberus10" />
+
+                <ImageView
+                    android:id="@+id/card3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cerberus10" />
+
+                <ImageView
+                    android:id="@+id/card4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cerberus10" />
+
+                <ImageView
+                    android:id="@+id/card5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cerberus10" />
+
+                <ImageView
+                    android:id="@+id/card6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cerberus10" />
+
+                <ImageView
+                    android:id="@+id/card7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cerberus10" />
+
+                <ImageView
+                    android:id="@+id/lowercard2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cerberus10" />
+            </LinearLayout>
+
+        </HorizontalScrollView>
 
     </LinearLayout>
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/activeComputerCard"
+        android:layout_width="185dp"
+        android:layout_height="201dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="150dp"
+        app:srcCompat="@drawable/tiger10" />
+
+    <ImageView
+        android:id="@+id/activePlayerCard"
+        android:layout_width="185dp"
+        android:layout_height="201dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="375dp"
+        app:srcCompat="@drawable/rechin12" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Horizontal ScrollView Example"
+        android:id="@+id/textViewlower"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="700dp"/>
+
+    <TextView
+        android:layout_width="140dp"
+        android:layout_height="60dp"
+        android:textSize="50sp"
+        android:text="score"
+        android:gravity="center"
+        android:id="@+id/score"
+        android:layout_marginStart = "250dp"
+        android:layout_marginTop="330dp"/>
+    <TextView
+        android:layout_width="140dp"
+        android:layout_height="60dp"
+        android:textSize="50sp"
+        android:gravity="center"
+        android:text="12"
+        android:id="@+id/scoreComputer"
+        android:layout_marginStart = "250dp"
+        android:layout_marginTop="200dp"/>
+
+    <TextView
+        android:layout_width="140dp"
+        android:layout_height="60dp"
+        android:textSize="50sp"
+        android:gravity="center"
+        android:text="8"
+        android:id="@+id/scorePlayer"
+        android:layout_marginStart = "250dp"
+        android:layout_marginTop="450dp"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="600dp">
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:id="@+id/horizontalScrollViewlower">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/lowercard3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cerberus10" />
+                <ImageView
+                    android:id="@+id/lowercard4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cerberus10" />
+                <ImageView
+                    android:id="@+id/lowercard5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cerberus10" />
+                <ImageView
+                    android:id="@+id/lowercard6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cerberus10" />
+                <ImageView
+                    android:id="@+id/lowercard7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cerberus10" />
+            </LinearLayout>
+
+        </HorizontalScrollView>
+    </LinearLayout>
+    </RelativeLayout>
