--- a/gamev10/app/src/main/res/layout/activity_welcome_page.xml
+++ b/gamev10/app/src/main/res/layout/activity_welcome_page.xml
@@ -2,185 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#00BCD4">
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Horizontal ScrollView Example"
-        android:id="@+id/textView"
+    <Button
+        android:id="@+id/startBtn"
+        android:layout_width="177dp"
+        android:layout_height="62dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="25dp">
-
-        <HorizontalScrollView
-            android:id="@+id/horizontalScrollView"
-            android:layout_width="match_parent"
-            android:layout_height="100dp">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/card1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-
-                <ImageView
-                    android:id="@+id/card2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
-
-                <ImageView
-                    android:id="@+id/card3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
-
-                <ImageView
-                    android:id="@+id/card4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
-
-                <ImageView
-                    android:id="@+id/card5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
-
-                <ImageView
-                    android:id="@+id/card6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
-
-                <ImageView
-                    android:id="@+id/card7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
-
-                <ImageView
-                    android:id="@+id/lowercard2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
-            </LinearLayout>
-
-        </HorizontalScrollView>
-
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/activeComputerCard"
-        android:layout_width="185dp"
-        android:layout_height="201dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="150dp"
-        app:srcCompat="@drawable/tiger10" />
-
-    <ImageView
-        android:id="@+id/activePlayerCard"
-        android:layout_width="185dp"
-        android:layout_height="201dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="375dp"
-        app:srcCompat="@drawable/rechin12" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Horizontal ScrollView Example"
-        android:id="@+id/textViewlower"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="700dp"/>
-
-    <TextView
-        android:layout_width="140dp"
-        android:layout_height="60dp"
-        android:textSize="50sp"
-        android:text="score"
-        android:gravity="center"
-        android:id="@+id/score"
-        android:layout_marginStart = "250dp"
-        android:layout_marginTop="330dp"/>
-    <TextView
-        android:layout_width="140dp"
-        android:layout_height="60dp"
-        android:textSize="50sp"
-        android:gravity="center"
-        android:text="12"
-        android:id="@+id/scoreComputer"
-        android:layout_marginStart = "250dp"
-        android:layout_marginTop="200dp"/>
-
-    <TextView
-        android:layout_width="140dp"
-        android:layout_height="60dp"
-        android:textSize="50sp"
-        android:gravity="center"
-        android:text="8"
-        android:id="@+id/scorePlayer"
-        android:layout_marginStart = "250dp"
-        android:layout_marginTop="450dp"/>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="600dp">
-
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:id="@+id/horizontalScrollViewlower">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/lowercard3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
-                <ImageView
-                    android:id="@+id/lowercard4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
-                <ImageView
-                    android:id="@+id/lowercard5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
-                <ImageView
-                    android:id="@+id/lowercard6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
-                <ImageView
-                    android:id="@+id/lowercard7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
-            </LinearLayout>
-
-        </HorizontalScrollView>
-    </LinearLayout>
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="123dp"
+        android:layout_marginTop="191dp"
+        android:layout_marginEnd="110dp"
+        android:layout_marginBottom="478dp"
+        android:text="Start Game" />
 </RelativeLayout>
