--- a/gamev10/app/src/main/res/layout/activity_game.xml
+++ b/gamev10/app/src/main/res/layout/activity_game.xml
@@ -30,53 +30,38 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/card1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
 
                 <ImageView
                     android:id="@+id/card2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
+                    app:srcCompat="@drawable/cardback" />
 
                 <ImageView
                     android:id="@+id/card3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
+                    app:srcCompat="@drawable/cardback" />
 
                 <ImageView
                     android:id="@+id/card4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
+                    app:srcCompat="@drawable/cardback" />
 
                 <ImageView
                     android:id="@+id/card5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
+                    app:srcCompat="@drawable/cardback" />
 
                 <ImageView
                     android:id="@+id/card6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
+                    app:srcCompat="@drawable/cardback" />
 
-                <ImageView
-                    android:id="@+id/card7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
 
-                <ImageView
-                    android:id="@+id/lowercard2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
             </LinearLayout>
 
         </HorizontalScrollView>
@@ -159,27 +144,27 @@
                     android:id="@+id/lowercard3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
+                     />
                 <ImageView
                     android:id="@+id/lowercard4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
+                     />
                 <ImageView
                     android:id="@+id/lowercard5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
+                     />
                 <ImageView
                     android:id="@+id/lowercard6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
+                     />
                 <ImageView
                     android:id="@+id/lowercard7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/cerberus10" />
+                     />
             </LinearLayout>
 
         </HorizontalScrollView>
