--- a/gamev10/app/src/main/res/layout/activity_main.xml
+++ b/gamev10/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_dark"
-    tools:context=".Login">
+    >
 
     <EditText
         android:id="@+id/user"
@@ -38,11 +38,11 @@
         android:id="@+id/loginBtn"
         android:layout_width="141dp"
         android:layout_height="52dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="44dp"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/registerBtn"
-        app:layout_constraintHorizontal_bias="0.564"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwd"
         app:layout_constraintVertical_bias="0.0" />
@@ -52,7 +52,7 @@
         android:layout_width="141dp"
         android:layout_height="52dp"
         android:layout_marginTop="44dp"
-        android:layout_marginEnd="76dp"
+        android:layout_marginEnd="50dp"
         android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
