--- a/gamev10/app/src/main/res/layout/activity_welcome_page.xml
+++ b/gamev10/app/src/main/res/layout/activity_welcome_page.xml
@@ -18,4 +18,17 @@
         android:layout_marginEnd="110dp"
         android:layout_marginBottom="478dp"
         android:text="Start Game" />
+
+    <Button
+        android:id="@+id/profileBtn"
+        android:layout_width="177dp"
+        android:layout_height="62dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="123dp"
+        android:layout_marginEnd="110dp"
+        android:layout_marginBottom="398dp"
+        android:text="Profile" />
+
 </RelativeLayout>
