--- a/gamev10/app/src/main/res/layout/activity_game.xml
+++ b/gamev10/app/src/main/res/layout/activity_game.xml
@@ -95,21 +95,27 @@
         android:layout_marginTop="700dp"/>
 
     <TextView
+        android:id="@+id/score"
         android:layout_width="140dp"
         android:layout_height="60dp"
-        android:textSize="50sp"
-        android:text="score"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="330dp"
         android:gravity="center"
-        android:id="@+id/score"
-        android:layout_marginStart = "250dp"
-        android:layout_marginTop="330dp"/>
+        android:text="Time:"
+        android:textSize="50sp" />
 
     <TextView
         android:id="@+id/scoreComputer"
         android:layout_width="140dp"
         android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="250dp"
         android:layout_marginTop="200dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginBottom="471dp"
         android:gravity="center"
         android:text="0"
         android:textSize="50sp" />
