--- a/gamev10/app/src/main/res/layout/activity_game.xml
+++ b/gamev10/app/src/main/res/layout/activity_game.xml
@@ -12,8 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="Horizontal ScrollView Example"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:text="Computer Cards"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="#FFFFFF" />
 
 
     <LinearLayout
@@ -90,8 +91,9 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="700dp"
-        android:text="Horizontal ScrollView Example"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:text="My cards"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="#FFFFFF" />
 
     <TextView
         android:id="@+id/score"
@@ -101,22 +103,24 @@
         android:layout_marginTop="330dp"
         android:gravity="center"
         android:text="Time:"
+        android:textColor="#FFFFFF"
         android:textSize="50sp" />
 
     <TextView
         android:id="@+id/scoreComputer"
-        android:layout_width="140dp"
-        android:layout_height="60dp"
+        android:layout_width="138dp"
+        android:layout_height="196dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="250dp"
         android:layout_marginTop="200dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="471dp"
+        android:layout_marginEnd="23dp"
+        android:layout_marginBottom="473dp"
         android:gravity="center"
         android:text="0"
+        android:textColor="#FFFFFF"
         android:textSize="50sp" />
 
     <TextView
@@ -127,6 +131,7 @@
         android:layout_marginTop="450dp"
         android:gravity="center"
         android:text="0"
+        android:textColor="#FFFFFF"
         android:textSize="50sp" />
 
 
