--- a/gamev10/app/src/main/res/layout/activity_welcome_page.xml
+++ b/gamev10/app/src/main/res/layout/activity_welcome_page.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00BCD4">
+    android:background="@drawable/welcomepage">
+
 
     <Button
         android:id="@+id/startBtn"
@@ -13,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="123dp"
-        android:layout_marginTop="86dp"
+        android:layout_marginTop="160dp"
         android:layout_marginEnd="109dp"
 
         android:text="Start Game" />
@@ -26,7 +27,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="123dp"
-        android:layout_marginTop="178dp"
+        android:layout_marginTop="264dp"
         android:layout_marginEnd="109dp"
         android:text="Profile" />
 
@@ -38,7 +39,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="123dp"
-        android:layout_marginTop="263dp"
+        android:layout_marginTop="363dp"
         android:layout_marginEnd="109dp"
         android:text="shuffle music" />
 
@@ -49,11 +50,29 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="123dp"
-        android:layout_marginTop="347dp"
-        android:layout_marginEnd="109dp"
+        android:layout_marginStart="234dp"
+        android:layout_marginTop="744dp"
+        android:layout_marginEnd="-2dp"
         android:checked="true"
-        android:textAlignment="center"
-        android:text="Sound" />
+        android:text="Sound"
+        android:textAlignment="center" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/logo" />
+
+    <Button
+        android:id="@+id/about"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="-3dp"
+        android:layout_marginEnd="326dp"
+        android:layout_marginBottom="3dp"
+        android:text="About" />
 
 </RelativeLayout>
